# dashdown-pypi-stats

./: .gitignore  AGENTS.md  README.md  clickpy.py  dashdown.yaml  pypi_api.py  pyproject.toml  sources.yaml
.claude/skills/dashdown-authoring/: SKILL.md
.github/workflows/: refresh-cache.yml
.references/: ai.md  catalog.md  cli.md  components.md  configuration.md  connectors.md  extending.md  filters.md
assets/: custom.css
data/: pypi_break_country.parquet  pypi_break_filetype.parquet  pypi_break_installer.parquet  pypi_break_python.parquet  pypi_break_system.parquet  pypi_break_version.parquet  pypi_daily_cache.parquet  pypi_top_packages.parquet  pypi_window_kpis.parquet
pages/: about.md  compare.md  index.md
queries/: by_country.py  by_filetype.py  by_installer.py  by_python.py  by_system.py  by_version.py  compare_daily.py  compare_meta.py  compare_resolved.sql  compare_totals.py  daily.py  daily_avg7.py  freshness.sql  kpis.py  project_options.sql  pypi_facts.py  pypi_meta.py  pypi_release_cadence.py  rank.py  resolved.sql  version_detail.py
scripts/: build_cache.py
